--- a/derik.html
+++ b/derik.html
@@ -20,7 +20,7 @@
 
     <section class="card">
         <h2>Derik Rocha</h2>
-        <img src="img/foto-derik_resized.jpeg" alt="foto-derik">   
+        <img id="img" src="img/foto-derik_resized.jpeg" alt="foto-derik">   
     
         <p id="pcard">sobre mim 
     
