--- a/home.html
+++ b/home.html
@@ -22,9 +22,15 @@
     <h2>Alunos do Projeto</h2>
     <p>Clique sobre a imagem para saber mais sobre o estudante desejado</p>
 
-    <h3>Derik Rocha</h3>
-    <a href="derik.html"><img src="img/foto-derik_resized.jpeg" alt="foto-derik"></a>
-     <h3>Nickolas Freire</h3>
-     <a href="nickolas.html"><img src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas"></a>
+    <div class="card_derik">
+        <h3>Derik Rocha</h3>
+        <a href="derik.html"><img src="img/foto-derik_resized.jpeg" alt="foto-derik"></a>
+    </div>
+
+    <div class="card_nickolas">
+        <h3>Nickolas Freire</h3>
+        <a href="nickolas.html"><img src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas"></a>
+    </div>
+
 </body>
 </html>
