--- a/nickolas.html
+++ b/nickolas.html
@@ -20,7 +20,7 @@
 
 <section class="card">
     <h2>Nickolas Freire</h2>
-        <img src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas">
+        <img id="img" src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas">
             <p id="pcard">Meu nome é Nickolas Freire, tenho 20 anos e moro em Santos-SP, completei o ensino médio e um curso técnico de Desenvolvimento de Sistemas na ETEC Draª – Ruth Cardoso. Estou no momento fazendo um curso de Sistemas para Internet na faculdade FATEC Rubens Lara - Baixada Santista e já tenho conhecimentos básicos na área de programação, como por exemplo saber manusear ferramentas como C#, HTML, CSS, JS, SQL, MongoDB, entre outras. Falando um pouco sobre mim eu me considero uma pessoa paciente e amigavél, gosto bastante de ouvir música e sair para conversar ou ir a praia, agora estou fazendo uma faculdade que está me interessando muito e que me dá espectativa de me colocar no mercado de trabalho com um vasto conhecimento sobre a área</p>
 </section>
 </body>
