--- a/home.html
+++ b/home.html
@@ -11,26 +11,29 @@
     <Header>
         <h1>Projeto Orientado</h1>
             <ul id="menu"> 
-                <li id="menu-item"><a id="menu-link" href="home.html">Home </a></li>
-                <li id="menu-item"><a id="menu-link" href="derik.html">Derik Rocha </a></li>
-                <li id="menu-item"><a id="menu-link" href="nickolas.html">Nickolas Freire </a></li>
-                <li id="menu-item"><a id="menu-link" href="curiosidades.html">Tabelas de Curiosidades </a></li>
-                <li id="menu-item"><a id="menu-link" href="favoritos.html">Site de Favoritos </a></li>
+                <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
+                <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
+                <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
+                <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
+                <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
             </ul>
     </Header>
 
     <h2>Alunos do Projeto</h2>
     <p>Clique sobre a imagem para saber mais sobre o estudante desejado</p>
 
-    <div class="card_derik">
-        <h3>Derik Rocha</h3>
-        <a href="derik.html"><img src="img/foto-derik_resized.jpeg" alt="foto-derik"></a>
-    </div>
+    <a href="derik.html">
+        <div id="card_derik">
+            <h3>Derik Rocha</h3>
+            <img class="img" src="img/foto-derik_resized.jpeg" alt="foto-derik">
+        </div>
+    </a>
 
-    <div class="card_nickolas">
-        <h3>Nickolas Freire</h3>
-        <a href="nickolas.html"><img src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas"></a>
-    </div>
-
+    <a href="nickolas.html">
+        <div id="card_nickolas">
+            <h3>Nickolas Freire</h3>
+            <img class="img" src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas">
+        </div>
+    </a>
 </body>
 </html>
