--- a/nickolas.html
+++ b/nickolas.html
@@ -10,11 +10,11 @@
     <Header>
         <h1>Projeto Orientado</h1>
             <ul id="menu"> 
-                <li id="menu-item"><a id="menu-link" href="home.html">Home </a></li>
-                <li id="menu-item"><a id="menu-link" href="derik.html">Derik Rocha </a></li>
-                <li id="menu-item"><a id="menu-link" href="nickolas.html">Nickolas Freire </a></li>
-                <li id="menu-item"><a id="menu-link" href="curiosidades.html">Tabelas de Curiosidades </a></li>
-                <li id="menu-item"><a id="menu-link" href="favoritos.html">Site de Favoritos </a></li>
+                <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
+                <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
+                <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
+                <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
+                <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
             </ul>
     </Header>
 
