--- a/curiosidades.html
+++ b/curiosidades.html
@@ -9,13 +9,13 @@
 <body>
     <Header>
         <h1>Projeto Orientado</h1>
-            <ul id="menu"> 
-                <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
-                <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
-                <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
-                <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
-                <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
-            </ul>
+        <ul id="menu"> 
+            <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
+            <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
+            <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
+            <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
+            <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
+        </ul>
     </Header>
 
     <h2 id="h2">Tabela de Curiosidades</h2>
@@ -28,38 +28,37 @@
                 <th>Derik Rocha</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>Altura</td>
+                <td>1,80</td>
+                <td>1,64</td>
+            </tr>
+            <tr>
+                <td>Hobbies</td>
+                <td>Escutar música</td>
+                <td>Passear e jogar</td>
+            </tr>
+            <tr>
+                <td>Filme</td>
+                <td>Donnie Darko</td>
+                <td>Vingadores Ultimato</td>
+            </tr>
+            <tr>
+                <td>Série de TV</td>
+                <td>Euphoria</td>
+                <td>The Big Bang Theory</td>
+            </tr>
+            <tr>
+                <td>Programa de TV</td>
+                <td>MasterChef</td>
+                <td>Pesadelo na Cozinha</td>
+            </tr>
+        </tbody>
+    </table>
+
     
-    <tbody>
-    <tr>
-        <td>Altura</td>
-        <td>1,80</td>
-        <td>1,64</td>
-    </tr>
+        <a href="home.html" class="btn">Voltar para Home</a>
 
-    <tr>
-        <td>Hobbies</td>
-        <td>Escutar música</td>
-        <td>Passear e jogar</td>
-    </tr>
-
-    <tr>
-        <td>Filme</td>
-        <td>Donnie Darko</td>
-        <td>Vingadores Ultimato</td>
-    </tr>
-
-    <tr>
-        <td>Série de TV</td>
-        <td>Euphoria</td>
-        <td>The Big Bang Theory</td>
-    </tr>
-
-    <tr>
-        <td>Programa de TV</td>
-        <td>MasterChef</td>
-        <td>Pesadelo na Cozinha</td>
-    </tr>
-    </tbody>
-</table>
 </body>
 </html>
