--- a/derik.html
+++ b/derik.html
@@ -3,29 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Orientado</title>
+    <title>Projeto Orientado - Derik Rocha</title>
     <link rel="stylesheet" href="Css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <Header>
         <h1>Projeto Orientado</h1>
-            <ul id="menu"> 
-                <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
-                <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
-                <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
-                <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
-                <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
-            </ul>
+        <ul id="menu"> 
+            <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
+            <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
+            <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
+            <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
+            <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
+        </ul>
     </Header>
 
     <section class="card">
         <h2>Derik Rocha</h2>
         <img id="img" src="img/foto-derik_resized.jpeg" alt="foto-derik">   
     
-        <p id="pcard">sobre mim 
-    
-            Meu nome é Derik, tenho 18 anos e sou apaixonado por tecnologia e inovação. Desde cedo, desenvolvi um grande interesse por áreas de desenvolvimento de sistemas e programação, o que me motivou a buscar uma formação sólida nessa área. Concluí o curso técnico em Desenvolvimento de Sistemas e, atualmente, estou cursando o curso de Sistemas para Internet na Fatec Rubens Lara, onde continuo aprimorando meus conhecimentos e habilidades.Tenho um bom domínio de diversas tecnologias e ferramentas essenciais para o desenvolvimento de soluções completas. Entre as principais habilidades que desenvolvi, destaco o conhecimento em linguagens de programação como HTML, CSS, JavaScript, C#, além de frameworks e bibliotecas como React Native e Node.js. Também tenho experiência com bancos de dados, como MongoDB e MySQL, que me permitem criar soluções eficientes e escaláveis. Além disso, sou familiarizado com o uso de Docker para a criação e gestão de containers, o que facilita a implementação e manutenção de ambientes de desenvolvimento. Tenho experiência com o sistema operacional Linux, o que me proporciona maior flexibilidade e autonomia em ambientes de desenvolvimento. Também possuo experiência prática no uso de ferramentas de design, como Photoshop e Figma, que me permitem colaborar efetivamente com as equipes de design para entregar soluções mais completas.Em termos de habilidades interpessoais, sou uma pessoa empática, com boa capacidade de resolução de problemas e que valoriza o trabalho em equipe. Acredito que uma comunicação clara e objetiva é essencial para a colaboração em projetos de desenvolvimento, e me esforço para contribuir positivamente para o ambiente de trabalho. Tenho facilidade em aprender novas tecnologias e me adaptar rapidamente a diferentes cenários, o que me torna um profissional proativo e sempre disposto a buscar soluções criativas e eficazes.Meu conhecimento em Inglês básico me permite compreender documentação técnica e interagir com conteúdos e comunidades internacionais, além de estar sempre em busca de aprimorar essa habilidade para expandir minhas oportunidades profissionais. Estou em busca de uma oportunidade para aplicar meus conhecimentos adquiridos em projetos práticos e aprender mais, contribuindo para o desenvolvimento de soluções inovadoras que agreguem valor aos processos de desenvolvimento de software.</p>
-    </section>
+        <p id="pcard">
+            Meu nome é Derik, tenho 18 anos e sou apaixonado por tecnologia e inovação. Desde cedo, desenvolvi um grande interesse por áreas de desenvolvimento de sistemas e programação...
+        </p>
 
+        <!-- Links para redes sociais -->
+        <nav class="social-links">
+            <a href="https://github.com/yHeyDark" target="_blank" class="social-link">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://linkedin.com/in/derik-rocha" target="_blank" class="social-link">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://wa.me/5513997353377" target="_blank" class="social-link">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </nav>
+    </section>
 </body>
 </html>
