--- a/curiosidades.html
+++ b/curiosidades.html
@@ -56,9 +56,8 @@
             </tr>
         </tbody>
     </table>
-
-    
-        <a href="home.html" class="btn">Voltar para Home</a>
-
+    <div class="button-container">
+    <a href="home.html" class="btn">Voltar para Home</a>
+    </div>
 </body>
 </html>
