--- a/derik.html
+++ b/derik.html
@@ -29,7 +29,7 @@
 
         <!-- Links para redes sociais -->
         <nav class="social-links">
-            <a href="https://github.com/yHeyDark" target="_blank" class="social-link">
+            <a href="https://github.com/NickDev-4" target="_blank" class="social-link">
                 <i class="fab fa-github"></i>
             </a>
             <a href="https://linkedin.com/in/derik-rocha" target="_blank" class="social-link">
