--- a/nickolas.html
+++ b/nickolas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Orientado</title>
     <link rel="stylesheet" href="Css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <Header>
@@ -21,7 +22,21 @@
 <section class="card">
     <h2>Nickolas Freire</h2>
         <img id="img" src="img/Foto-Nickolas_resized.jpg" alt="Foto-Nickolas">
+
             <p id="pcard">Meu nome é Nickolas Freire, tenho 20 anos e moro em Santos-SP, completei o ensino médio e um curso técnico de Desenvolvimento de Sistemas na ETEC Draª – Ruth Cardoso. Estou no momento fazendo um curso de Sistemas para Internet na faculdade FATEC Rubens Lara - Baixada Santista e já tenho conhecimentos básicos na área de programação, como por exemplo saber manusear ferramentas como C#, HTML, CSS, JS, SQL, MongoDB, entre outras. Falando um pouco sobre mim eu me considero uma pessoa paciente e amigavél, gosto bastante de ouvir música e sair para conversar ou ir a praia, agora estou fazendo uma faculdade que está me interessando muito e que me dá espectativa de me colocar no mercado de trabalho com um vasto conhecimento sobre a área</p>
+
+    <!-- Links para redes sociais -->
+        <nav class="social-links">
+            <a href="https://github.com/NickDev-4" target="_blank" class="social-link">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/nickolas-freire" target="_blank" class="social-link">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://wa.me/5513982162230?text=" target="_blank" class="social-link">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </nav>
 </section>
 </body>
 </html>
