Atividade de PPSI

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -15,6 +15,7 @@
             <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
             <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
             <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
+            <li class="menu-item"><a class="menu-link" href="forms.html">Contato</a></li>
         </ul>
     </Header>
 
