--- a/derik.html
+++ b/derik.html
@@ -16,6 +16,8 @@
             <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
             <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
             <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
+            <li class="menu-item"><a class="menu-link" href="forms.html">Contato</a></li>
+
         </ul>
     </Header>
 
@@ -29,7 +31,7 @@
 
         <!-- Links para redes sociais -->
         <nav class="social-links">
-            <a href="https://github.com/NickDev-4" target="_blank" class="social-link">
+            <a href="https://github.com/yheydark" target="_blank" class="social-link">
                 <i class="fab fa-github"></i>
             </a>
             <a href="https://linkedin.com/in/derik-rocha" target="_blank" class="social-link">
