--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
             <li class="menu-item"><a class="menu-link" href="derik.html">Derik</a></li>
             <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas</a></li>
             <li class="menu-item"><a class="menu-link" href="curiosidades.html">Curiosidades</a></li>
-            <li class="menu-item"><a class="menu-link" href="favoritos.html">Favoritos</a></li>
-            <li class="menu-item"><a class="menu-link" href="forms.html">Contato</a></li>
+            <li class="menu-item"><a class="menu-link" href="favoritos.html">Sites</a></li>
+            <li class="menu-item"><a class="menu-link" href="forms.html">Contatos</a></li>
 
         </ul>
     </header>
