--- a/derik.html
+++ b/derik.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <Header>
+    <header>
         <h1>Projeto Orientado</h1>
         <ul id="menu"> 
             <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
-            <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
-            <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
-            <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
-            <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
-            <li class="menu-item"><a class="menu-link" href="forms.html">Contato</a></li>
+            <li class="menu-item"><a class="menu-link" href="derik.html">Derik</a></li>
+            <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas</a></li>
+            <li class="menu-item"><a class="menu-link" href="curiosidades.html">Curiosidades</a></li>
+            <li class="menu-item"><a class="menu-link" href="favoritos.html">Sites</a></li>
+            <li class="menu-item"><a class="menu-link" href="forms.html">Contatos</a></li>
 
         </ul>
-    </Header>
+    </header>
 
     <section class="card">
         <h2>Derik Rocha</h2>
