--- a/favoritos.html
+++ b/favoritos.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <Header>
+        <header>
         <h1>Projeto Orientado</h1>
-            <ul id="menu"> 
-                <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
-                <li class="menu-item"><a class="menu-link" href="derik.html">Derik Rocha</a></li>
-                <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas Freire</a></li>
-                <li class="menu-item"><a class="menu-link" href="curiosidades.html">Tabelas de Curiosidades</a></li>
-                <li class="menu-item"><a class="menu-link" href="favoritos.html">Site de Favoritos</a></li>
-                <li class="menu-item"><a class="menu-link" href="forms.html">Contato</a></li>
+        <ul id="menu"> 
+            <li class="menu-item"><a class="menu-link" href="home.html">Home</a></li>
+            <li class="menu-item"><a class="menu-link" href="derik.html">Derik</a></li>
+            <li class="menu-item"><a class="menu-link" href="nickolas.html">Nickolas</a></li>
+            <li class="menu-item"><a class="menu-link" href="curiosidades.html">Curiosidades</a></li>
+            <li class="menu-item"><a class="menu-link" href="favoritos.html">Sites</a></li>
+            <li class="menu-item"><a class="menu-link" href="forms.html">Contatos</a></li>
 
-            </ul>
-    </Header>
+        </ul>
+    </header>
 
     <h2>Lista de Sites Favoritos</h2>
 
