Atividade de PPSI

--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,7 @@
 
     <h1>Contatos</h1>
 
-    <div id="container-contatos">
+    <section id="container-contatos">
         <div id="contatos">
             <form>
                 <p>
@@ -75,6 +75,6 @@
                 </div>
             </form>
         </div>
-    </div>
+    </section>
 </body>
 </html>
